Fix search always being visible

--- a/assets/source/sass/main.scss
+++ b/assets/source/sass/main.scss
@@ -103,7 +103,6 @@
   }
 
   .site-header-container,
-  .header__search,
   .site-header__logotype {
     display: block;
   }
